--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -29,8 +29,21 @@
 	</view>
 	<van-dialog id="van-dialog" confirm-button-color="#27A2FD" />
 	<l-message content="{{content}}" />
-	<view class="pof bgColor27A2 colorWhite tc"
-		style="right:10%;bottom:12%;width:30px;height: 30px; line-height:32px;border-radius:200px;" bindtap="GetSandCode">
-		<van-icon name="scan" size="18px" />
+
+	<view class="tab-bar" style="overflow:unset">
+		<view class="tab-bar-border"></view>
+		<cover-view class="tab-bar-item">
+			<cover-image src="https://file.zwyknit.com/%E9%A6%96%E9%A1%B5-01.png"></cover-image>
+			<cover-view class="color27A2">首页</cover-view>
+		</cover-view>
+		<view class="tab-bar-item" style="transform: translateY(-50%);" bindtap="GetSandCode">
+			<van-icon name="scan" size="50px" class="color91"
+				style="background-color: white; border-top: 1px solid rgba(0, 0, 0, 0.33);padding: 10px; border-radius: 500px;" />
+		</view>
+		<cover-view class="tab-bar-item" bindtap="toManage">
+			<cover-image src="https://file.zwyknit.com/%E7%AE%A1%E7%90%86%EF%BC%88%E7%81%B0%E8%89%B2%EF%BC%89-01.png">
+			</cover-image>
+			<cover-view class="color91">管理</cover-view>
+		</cover-view>
 	</view>
 </view>
