--- a/pages/manage/manage.scss
+++ b/pages/manage/manage.scss
@@ -3,11 +3,6 @@
   height: 100vh;
 }
 
-.bg {
-  background: url(https://file.zwyknit.com/20220113151412.jpg) no-repeat;
-  background-size: 100% 50%;
-}
-
 .manage-list {
   height: 90px;
 }
@@ -33,4 +28,43 @@
   0%   {transform: scale(0.8);}
   50%  {transform: scale(1);}
   100% {transform: scale(0.8);}
+}
+
+.tab-bar {
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	height: 50px;
+	background: white;
+	padding-top: 10px;
+	display: flex;
+	padding-bottom: env(safe-area-inset-bottom);
+}
+.tab-bar-border {
+	background-color: rgba(0, 0, 0, 0.33);
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 1px;
+	transform: scaleY(0.5);
+}
+
+.tab-bar-item {
+	flex: 1;
+	text-align: center;
+	display: flex;
+	justify-content:space-around;
+	align-items: center;
+	flex-direction: column;
+}
+
+.tab-bar-item cover-image {
+	width: 27px;
+	height: 27px;
+}
+
+.tab-bar-item cover-view {
+	font-size: 30rpx;
 }
