--- a/pages/outsourcingAcceptance/outsourcingAcceptance.scss
+++ b/pages/outsourcingAcceptance/outsourcingAcceptance.scss
@@ -1,9 +1,15 @@
 #outsourcingAcceptance {
   .van-radio {
     margin-top: 10px;
-	}
-	
-	.van-checkbox{
-		margin-top: 10px;
-	}
+  }
+
+  .van-checkbox {
+    margin-top: 8px;
+    border-bottom: 1px solid #e7e7e7;
+    padding-bottom: 8px;
+  }	
+
+  .van-checkbox__label {
+    width: 100%;
+  }
 }
